# mazes-py

./: .gitignore  Justfile  formatter.py  gen_mask_from_image.py  gen_mask_using_alpha.py  gen_pokemon_masks.sh  gen_pokemon_masks_alpha.sh  gen_pokemon_mazes.sh  grid.py  main.py  main_triangle.py  main_triangle_rect.py  main_triangle_triangle.py  main_v2.py  mask.py  mask.txt  mask_from_img.py  mask_from_txt.py  maze_generation.py  polar_grid.py  pyproject.toml  readme.md  stats.py  tests.py
maze/: distance.py  formatter.py  grid.py  mask.py  maze_generation.py  rectangulargrid.py
maze/grid/: __init__.py  cell.py  distance_grid.py  grid.py  polar_cell.py  polar_grid.py  rectangular_cell.py  rectangular_grid.py  triangle_cell.py  triangle_grid.py
pokemon/: notes.txt
